# tai-oe

./: .gitignore  IMPORT-2026-ABB.md  README.md  TODO.md  backend.refactor.2.plan.md  backend.refactor.3.plan.md  backend.refactor.plan.md  chrome-upload.py  db-config-refactoring.plan.md  flow.md  phase4-reorg-plan.md  rag.sln  schema.sql  src.refactoring.plan.COMPACT.md  src.refactoring.plan.md  supabase-refactoring.plan.md  user-manager.plan.md
back/: .gitignore  .supabase-backend.env  EMAIL_AUTH_SYSTEM.md  LLM_EXTRACTION_IMPLEMENTATION.md  README.md  TOKEN_REGENERATION.md  action-scheduler.conf  action-scheduler.service  add_attachment_type.py  apply_auth_migrations_v2.py  azur.plan  check_db_state.py  check_supabase_families.py  clear_extraction_cache.js  clear_tables.py  config.yml  dev.py  extract_contact_from_file.py  extract_products_from_file.py  llmvision.plan.md  phase5-src-refactor-plan.md  plan.md  pyproject.toml  qrant-remove.plan.md  refactoring.plan.md  regenerate_google_token.py  requirements.txt  run_migration.py  setup_email_auth.sh  test_action_cli.py  test_action_cli_comprehensive.py  test_extraction_logic.py  test_llm_model.py  test_qdrant_refciales.py  test_scroll_uniqueness.py  tmp
back/docs/: ACTION_CLI_QUICK_REFERENCE.md  ACTION_CLI_README.md  ACTION_SCHEDULER_DAEMON.md  ACTION_SYSTEM_COMPLETE.md  DEPENDENCY_INJECTION_REFACTOR.md  DEV_SERVER.md  DIRECT_QUERY_FEATURE.md  DIRECT_QUERY_TEST_CASES.md  EMAIL_AUTH_IMPLEMENTATION.md  EMAIL_FETCH_FLOW_COMPARISON.md  GMAIL_INTEGRATION.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  (+24 more)
(+1282 files in other folders)
