[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-server"
version = "0.1.0"
description = "RAG server with database and vector search capabilities"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "google-api-python-client>=2.70.0",
    "google-auth>=2.16.0",
    "google-auth-oauthlib>=0.8.0",
    "google-auth-httplib2>=0.1.0",
    "openai>=1.3.0",
    "openpyxl>=3.0.0",
    "pandas>=2.0.0",
    "pdfplumber>=0.9.0",
    "pypdf>=3.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9.0",
    "requests>=2.31.0",
    "sentence-transformers>=2.2.0",
    "supabase>=2.0.0",
    "weasyprint>=60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.1.0",
    "pytest-cov>=4.0",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "script*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yml", "*.yaml"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests", "src", "script"]
python_files = ["test_*.py", "*_test.py"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that hit real external services (LLM/DB)",
]
timeout = 10
timeout_method = "thread"
